# lovebox

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
src/lovebox/: __init__.py  api.py  config.py  events.py  main.py  render.py  scheduler.py  weather.py
tests/: test_config.py  test_events.py  test_render.py  test_scheduler.py  test_weather.py
