[project]
name = "lovebox-dagbericht"
version = "0.0.0"  # de echte versie komt uit de git-tag (docker-publish.yml)
description = "Stuurt dagelijks weer, kledingadvies en aankomende verjaardagen/activiteiten naar een Lovebox"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31,<3",
    "Pillow>=10.3,<12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "ruff>=0.6,<0.9",
]

[project.scripts]
lovebox = "lovebox.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
